--- a/css/styles.css
+++ b/css/styles.css
@@ -158,10 +158,15 @@ h3 {
 .order {
   background: #2e2f42;
   padding: 188px 0;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/people-office.jpg);
 }
 /* .order-container {
-  padding: 188px 0;
 } */
+
 .order-title {
   max-width: 496px;
   margin-bottom: 48px;
@@ -176,7 +181,7 @@ h3 {
 }
 
 .order-button {
-  min-width: 169px ;
+  min-width: 169px;
   margin-bottom: 188px;
   background: #4d5ae5;
   color: #fff;
@@ -323,7 +328,7 @@ h3 {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   display: inline-block;
-  margin-bottom: 16px; 
+  margin-bottom: 16px;
 }
 .footer-logo-accent {
   color: #f4f4fd;
