adjust extra properties for backgr-image

--- a/css/styles.css
+++ b/css/styles.css
@@ -163,6 +163,9 @@ h3 {
       rgba(46, 47, 66, 0.7)
     ),
     url(../images/people-office.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 /* .order-container {
 } */
