--- a/css/styles.css
+++ b/css/styles.css
@@ -342,3 +342,13 @@ h3 {
   line-height: 1.5; /* 150% */
   letter-spacing: 0.02em;
 }
+
+/* #SECTION TEAM */
+.reviews-items {
+}
+.reviews-elem {
+}
+.reviews-link {
+}
+.reviews-icon {
+}
