--- a/css/styles.css
+++ b/css/styles.css
@@ -252,7 +252,7 @@ h3 {
 }
 .card-content {
   display: flex;
-  width: 232px;
+  /* width: 232px; */
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -345,10 +345,33 @@ h3 {
 
 /* #SECTION TEAM */
 .reviews-items {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+
+  margin-top: 8px;
 }
 .reviews-elem {
+  width: 40px;
+  height: 40px;
 }
-.reviews-link {
+ .reviews-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+
+  background-color: #4d5ae5;
+  color: #f4f4fd;
+  border-radius: 50%;
+}
+
+.reviews-link:hover,
+.reviews-link:focus {
+  background-color: #404BBF;
 }
 .reviews-icon {
+  fill: currentColor;
 }
