--- a/css/styles.css
+++ b/css/styles.css
@@ -375,3 +375,49 @@ h3 {
 .reviews-icon {
   fill: currentColor;
 }
+
+.footer-container{
+  display: flex;
+  gap: 120px;
+}
+/* Footer socials */
+.footer-socials {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+.socials-title {
+color: var(--WHITE, #FFF);
+font-weight: 500;
+line-height: 1.5; /* 150% */
+letter-spacing: 0.02em;
+}
+.footer-items {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+
+}
+.footer-elem {
+  width: 40px;
+  height: 40px;
+}
+.footer-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+
+  background-color: #4d5ae5;
+  color: #f4f4fd;
+  border-radius: 50%;
+}
+.footer-link:hover,
+.footer-link:active{
+  background-color: #31D0AA;
+}
+.footer-icon {
+  fill: currentColor;
+}
