--- a/css/styles.css
+++ b/css/styles.css
@@ -142,7 +142,7 @@ h3 {
 }
 .header-link.active::after {
   position: absolute;
-  bottom: 0;
+  bottom: -1px;
 
   content: '';
   display: block;
@@ -325,8 +325,12 @@ h3 {
   align-items: flex-start;
   width: calc((100% - 24px * 2) / 3);
 }
+.portfolio-item:hover .overlay {
+  transform: translateY(0%);
+}
 .portfolio-wrapper {
   position: relative;
+  overflow: hidden;
 }
 .portfolio-icon {
 }
@@ -347,6 +351,9 @@ h3 {
   letter-spacing: 0.02em;
 
   background: #4d5ae5;
+
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-project {
   color: #2e2f42;
