--- a/css/styles.css
+++ b/css/styles.css
@@ -172,7 +172,7 @@ h3 {
   line-height: 1.5; /* 150% */
   letter-spacing: 0.02em;
 }
-.socials-item-link{
+.socials-item-link {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .socials-item-link:hover,
@@ -247,6 +247,18 @@ h3 {
   display: flex;
   width: 264px;
   flex-direction: column;
+}
+.feature-wrapper {
+  width: 264px;
+  height: 112px;
+  flex-shrink: 0;
+
+  border-radius: 4px;
+  border: 1px solid var(--LIGHT-SLATE, #8e8f99);
+  background: var(--CLOUD, #f4f4fd);
+}
+.features-icon{
+  margin: 24px 100px;
 }
 .features-caption {
   color: #2e2f42;
