--- a/css/styles.css
+++ b/css/styles.css
@@ -223,6 +223,8 @@ h3 {
   display: block;
   margin: auto;
 
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+
   transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -302,6 +304,8 @@ h3 {
 .team-item {
   background: #fff;
   border-radius: 0px 0px 4px 4px;
+
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 .team-icon {
 }
@@ -342,6 +346,14 @@ h3 {
   flex-direction: column;
   align-items: flex-start;
   width: calc((100% - 24px * 2) / 3);
+
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+.portfolio-item:hover,
+.portfolio-item:focus{
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+
 }
 .portfolio-item:hover .overlay {
   transform: translateY(0%);
