--- a/css/styles.css
+++ b/css/styles.css
@@ -258,6 +258,7 @@ h3 {
   border-radius: 4px;
   border: 1px solid var(--LIGHT-SLATE, #8e8f99);
   background: var(--CLOUD, #f4f4fd);
+  margin-bottom: 8px;
 }
 .features-icon{
   margin: 24px 100px;
