add box-shadow for the header

--- a/css/styles.css
+++ b/css/styles.css
@@ -83,6 +83,7 @@ h3 {
 /* Section 0 --> Header */
 .header {
   border-bottom: 1px solid var(--CORNFLOWER, #e7e9fc);
+  box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 2px 1px 0px rgba(46, 47, 66, 0.08);
 }
 .header-container {
   display: flex;
