--- a/css/styles.css
+++ b/css/styles.css
@@ -193,6 +193,7 @@ h3 {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  max-width: 1440px;
 }
 /* .order-container {
 } */
