--- a/css/styles.css
+++ b/css/styles.css
@@ -228,12 +228,12 @@ h3 {
 
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 
-  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .order-button:hover,
 .order-button:focus {
-  background: #404bbf;
+  background-color: #404bbf;
 }
 
 .button-text {
@@ -254,6 +254,10 @@ h3 {
   flex-direction: column;
 }
 .feature-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   width: 264px;
   height: 112px;
   flex-shrink: 0;
@@ -264,7 +268,7 @@ h3 {
   margin-bottom: 8px;
 }
 .features-icon{
-  margin: 24px 100px;
+  /* margin: 24px 100px; */
 }
 .features-caption {
   color: #2e2f42;
@@ -405,6 +409,9 @@ h3 {
   background: #2e2f42;
   padding: 100px 0;
 }
+.footer-description{
+  margin-right: 120px
+}
 
 .footer-logo {
   color: #4d5ae5;
@@ -464,19 +471,22 @@ h3 {
 
 .footer-container {
   display: flex;
-  gap: 120px;
+  /* gap: 120px; */
 }
 /* Footer socials */
 .footer-socials {
   display: flex;
+  align-items: baseline;
   flex-direction: column;
-  gap: 16px;
+  /* gap: 16px; */
 }
 .socials-title {
   color: var(--WHITE, #fff);
   font-weight: 500;
   line-height: 1.5; /* 150% */
   letter-spacing: 0.02em;
+
+  margin-bottom: 16px; 
 }
 .footer-items {
   display: flex;
@@ -502,7 +512,7 @@ h3 {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-link:hover,
-.footer-link:active {
+.footer-link:focus {
   background-color: #31d0aa;
 }
 .footer-icon {
