fix after mentor's review

--- a/css/styles.css
+++ b/css/styles.css
@@ -191,9 +191,11 @@ h3 {
     ),
     url(../images/people-office.jpg);
   background-repeat: no-repeat;
-  background-position: center;
+  
   background-size: cover;
   max-width: 1440px;
+  background-position: center;
+  margin: 0 auto;
 }
 .order-container {
 }
